--- a/css/style.css
+++ b/css/style.css
@@ -14,22 +14,15 @@ html, body {
 /**************************************************
 * Map styling
 **************************************************/
-// .map-container no longer needed
-.map-container {
+
+.angular-google-map-container {
     display: block;
     margin-right: 200px;
     padding: 0;
     position: relative;
-    height: 100%;
+    height: 400px;
 }
 
-#map {
-    display: block;
-    margin-right: 200px;
-    padding: 0;
-    position: relative;
-    height: 100%;
-}
 /**************************************************
 * Form styling
 **************************************************/
