--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ html, body {
     width: 300px;
 }
 
+.fontWeight100 {
+    font-weight: 100;
+}
+
 .formTitle, .btn {
     font-weight: inherit;
 }
